plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromClassToAlias/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in [js, jvm] modules'; targets=[(text=js; icon=nodes/Module.svg); (text=jvm; icon=nodes/Module.svg)]")!>Header<!> {

}
